# bots_web

./: .gitmodules  CMakeLists.txt  main.cpp
public/: apn_setting.html  console.html  diagnosis.html  driving.html  imu_calibration.html  index.html  media_setting.html  navbar.html  proxy.html  robot_info.html  upgrade.html  wifi_setting.html
public/css/: driving.css  index.css  styles.css
public/js/: apn.js  diagnosis.js  driving.js  imu_calibration.js  media_setting.js  proxy.js  robot_info.js  script.js  upgrade.js  wifi.js
public2/: apn_setting.html  diagnosis.html  driving.html  imu_calibration.html  index.html  media_setting.html  navbar.html  proxy.html  robot.html  upgrade.html  wifi_setting.html
public2/js/: apn_setting.js  diagnosis.js  driving.js  imu_calibration.js  media_setting.js  proxy.js  robot.js  upgrade.js  wifi.js
